# hand-object-track-test

./: .gitignore  README.md  pyproject.toml
src/: hand_track.py  main.py  midas.py  yolo.py
