[tool.poetry]
name = "hand-object-track-test"
version = "0.1.0"
description = ""
authors = ["mur6"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
mediapipe = "^0.8.9"
torch = "^1.11.0"
pandas = "^1.4.2"
torchvision = "^0.12.0"
tensorflow = "^2.8.0"
opencv-python = "^4.5.5"
PyYAML = "^6.0"
tqdm = "^4.64.0"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]
pysen = {version = "0.10.1", extras = ["lint"]}
click = "8.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pysen]
version = "0.10"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = false
mypy_preset = "strict"
line_length = 88
py_version = "py38"
[[tool.pysen.lint.mypy_targets]]
  paths = ["."]
